# Animation_Project

./: README.md
Animation_Project/Part1and2/: CMakeLists.txt  animation.cpp  frame.cpp  part1.c
Animation_Project/Part3/: CMakeLists.txt  animation.cpp  animation.h  animationManager.cpp  animationManager.h  frame.cpp  frame.h  part3.cpp
